fixed mobile responsiveness on small screens, for restaurant and reviews section

--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,7 @@
 
 body,td,th,p{
 	font-family: Arial, Helvetica, sans-serif;
-	font-size: 10pt;
+	font-size: 19px;
 	color: #333;
 	line-height: 1.5;
 }
@@ -32,9 +32,17 @@ h1, h2, h3, h4, h5, h6 {
   font-family: Arial, Helvetica, sans-serif;
   margin: 0 0 20px;
 }
+
+label {
+  font-family: Arial, Helvetica, sans-serif;
+  color: #fff;
+}
+
+
 article, aside, canvas, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
 	display: block;
 }
+
 #maincontent {
   background-color: #f3f3f3;
   min-height: 100%;
@@ -67,7 +75,7 @@ nav h1 a {
   text-transform: uppercase;
 }
 #breadcrumb {
-  padding: .75em;
+  padding: .75em 0 ;
   list-style: none;
   background-color: #eee;
   font-size: 17px;
@@ -78,6 +86,7 @@ nav h1 a {
 /* Display list items side by side */
 #breadcrumb li {
     display: inline;
+    font-size: 20px;
 }
 
 /* Add a slash symbol (/) before/behind each list item */
@@ -90,7 +99,9 @@ nav h1 a {
 /* Add a color to all links inside the list */
 #breadcrumb li a {
     color: #0275d8;
+    padding: 1em;
     text-decoration: none;
+    font-size: 20px;
 }
 
 /* Add a color on mouse-over */
@@ -109,6 +120,7 @@ nav h1 a {
   width: 100%;
   background-color: #00A4BD;
   padding: 2em 0em;
+  text-align: center;
   align-items: center;
 }
 .filter-options h2 {
@@ -155,6 +167,11 @@ background-color: #f3f3f3;
   text-align: center;
   margin: 2em auto;
 
+}
+li:hover{
+   box-shadow: rgba(45, 62, 80, 0.08) 0px 1px 5px 0px;
+    margin: 1rem;
+    transition: transform 0.2s ease-in-out 0s;
 }
 #restaurants-list .restaurant-img {
   background-color: #ccc;
@@ -219,12 +236,12 @@ background-color: #f3f3f3;
 .inside #footer {
   bottom: 0;
   position: absolute;
-  width: 50%;
+  width: 100%;
 }
 #restaurant-name {
   color: #f18200;
   font-family: Arial,sans-serif;
-  font-size: 20pt;
+  font-size: 3.5em;
   font-weight: 200;
   letter-spacing: 0;
   margin: 15px 0 30px;
@@ -235,17 +252,18 @@ background-color: #f3f3f3;
 	width: 100%;
 }
 #restaurant-address {
-  font-size: 12pt;
-  margin: 10px 0px;
+  font-size: 28px;
+  margin: 1em 0px;
+  text-align: center;
 }
 #restaurant-cuisine {
   background-color: #333;
   color: #ddd;
-  font-size: 12pt;
+  font-size: 1.15em;
   font-weight: 300;
   letter-spacing: 10px;
-  margin: 0 0 20px;
-  padding: 2px 0;
+  margin: 20px 0 20px;
+  padding: .25em .75em;
   text-align: center;
   text-transform: uppercase;
 	width: 90%;
@@ -267,31 +285,49 @@ background-color: #f3f3f3;
   padding-bottom: 1pt;
 }
 #reviews-list {
-  margin: 0;
+  margin-bottom: 4em;  
   padding: 0;
+  display: flex;
+  flex-direction: column;
 }
 #reviews-list li {
   background-color: #fff;
-    border: 2px solid #f3f3f3;
+  border: 2px solid #f3f3f3;
   display: block;
   list-style-type: none;
-  margin: 0 0 30px;
+  margin: 10px auto;
   overflow: hidden;
   padding: 0 20px 20px;
   position: relative;
   width: 85%;
 }
 #reviews-list li p {
-  margin: 0 0 10px;
+  margin: 1em 0.85em 1em;
+  text-align: center;
+
+}
+
+#reviews-list  h3{
+  font-size: 2em !important;
+  padding-top: 1em;
+
+}
+
+#reviews-list  h4{
+  font-size: 1.5em !important;
+  padding-top: 1em;
+  font-weight: 300;
 }
 #restaurant-hours td {
   color: #666;
+  padding: 10px 5px;
+
 }
 
 
 /* devices with less than 600px of width */
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 720px) {
 
   .inside header {
     width: 100%;
@@ -309,14 +345,24 @@ background-color: #f3f3f3;
 #restaurant-container, #reviews-container {
   border-bottom: 1px solid #d9d9d9;
   border-top: 1px solid #fff;
-  padding: 140px 40px 30px;
+  padding: 2em 0em;
+  width: 100%;
+}
+
+#restaurant-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 2em 0em;
   width: 100%;
 }
 
 #restaurant-img {
   width: 100%;
-  max-width: 400px;
+  max-width: 390px;
   height: auto;
 }
+
 
  }
